--- a/src/main/resources/application_pt.properties
+++ b/src/main/resources/application_pt.properties
@@ -6,12 +6,12 @@ pages.comuns.cabecalho.img.title			= Logotipo do Sistema
 pages.comuns.cabecalho.lingua               = Trocar Linguagem: 
 
 pages.comuns.menuLateral.gerencial 			= Gerencial
-pages.comuns.menuLateral.inicio             = In\u00EDcio
-pages.comuns.menuLateral.options            = Op\u00E7\u00F5es    
+pages.comuns.menuLateral.inicio             = Início
+pages.comuns.menuLateral.options            = Opções    
 
 pages.inicio.welcome						= Bem vindo!
-pages.inicio.title							= Sistema->In\u00EDcio
-pages.inicio.menu							= In\u00EDcio
+pages.inicio.title							= Sistema->Início
+pages.inicio.menu							= Início
 
 pages.comuns.rodape.footerText 				= http://www.yourcompany.com - Alfa 1.0
 pages.comuns.rodape.allRightsReserved 		= 2016 - Todos os direitos reservados
@@ -20,7 +20,7 @@ pages.templateMenu.titleMainMenu 		     = Menu Principal
 
 pages.cadastroAluno.title					= Gerencial->Cadastro Aluno
 pages.cadastroAluno.menu					= Cadastro Aluno
-pages.cadastroAluno.matricula				= Matr\u00EDcula
+pages.cadastroAluno.matricula				= Matrícula
 pages.cadastroAluno.nome					= Nome
 pages.cadastroAluno.curso					= Curso
 pages.cadastroAluno.btnSalvar				= Salvar
@@ -32,14 +32,14 @@ pages.cadastroProfessor.nome				= Nome
 pages.cadastroProfessor.curso				= Curso
 pages.cadastroProfessor.btnSalvar			= Salvar
 
-pages.tela2.hello							= Ol\u00E1 da tela2
+pages.tela2.hello							= Olá da tela2
 pages.tela2.title							= Gerencial->Tela2
 pages.tela2.menu							= Tela2
 
-pages.tela3.hello							= Ol\u00E1 da tela3
+pages.tela3.hello							= Olá da tela3
 pages.tela3.title							= Gerencial->Tela3
 pages.tela3.menu							= Tela3
 
-pages.linguagem.title                       = Opc\u00F5es->Linguagem
+pages.linguagem.title                       = Opcões->Linguagem
 pages.linguagem.lingua						= Trocar de Idioma:
 pages.linguagem.menu						= Linguagem
